# libioaccess

./: CMakeLists.txt
cmake/: LibIOAccessConfig.cmake.in  LibIOAccessConfigVersion.cmake.in
include/ioaccess/: IOAccess.h  StdioInterface.h  StdioInterfacePrivate.h
src/: IOAccess.cpp  StdioInterface.cpp
